# MultiPrint-Agent

./: .gitignore  LICENSE  MultiPrintAgent.spec  README.md  README_PT-Br.md  README_PT_Br.md  Roadmap.txt  app.py  config.json  pyproject.toml  requirements.txt  roadmap.md
certs/: localhost.crt  localhost.key
config/: agent.json  config.json  zebra_printers.json
core/: agent_config.py  config.py  dispatcher.py  printer_state.py  security.py  ssl_config.py
modules/: eventlog.py  payload_utils.py  print_laser.py  print_zebra.py  printer_utils.py  renderer.py  test_assets.py
modules/observability/: eventlog.py
modules/payload/: limits.py  validator.py
modules/printers/: detector.py  utils.py
modules/printing/: dispatcher.py
modules/security/: auth.py  config.py  session_tokens.py
multiprint_agent/: __init__.py  app.py
multiprint_agent/config/: agent.json  security.json
multiprint_agent/core/: agent_config.py  agent_state.py  constants.py  exceptions.py  handlers.py  paths.py  response.py  ssl_config.py
multiprint_agent/modules/: test_assets.py
multiprint_agent/static/: ui.html
multiprint_web_agent/: __init__.py  app.py
multiprint_web_agent/certs/: .gitkeep
multiprint_web_agent/config/: agent.json
multiprint_web_agent/core/: agent_config.py  exceptions.py  handlers.py  json_utils.py  paths.py  response.py  security.py  ssl_config.py
multiprint_web_agent/modules/: test_assets.py
routes/: auth.py  config.py  health.py  logs.py  print.py  print_test.py  printers.py  state.py  ui.py  version.py
static/: ui.css  ui.html  ui.js
(+63 files in other folders)
