[tool.poetry]
name = "multiprint-web-agent"
version = "0.5.0"
description = "Local print agent for Zebra and Laser printers with secure REST API."
authors = ["Pedro Godoy <pedro_godoy2@hotmail.com>"]
readme = "README.md"
packages = [{ include = "multiprint_web_agent" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.1.2"
flask-cors = "^6.0.2"
pywin32 = "^311"
pymupdf = "^1.27.1"
pillow = "^12.1.1"
reportlab = "^4.4.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.3"
pyinstaller = "^6.19.0"

[tool.poetry.scripts]
multiprint = "multiprint_web_agent.app:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"